# mpv-discord-cplugin

./: .gitignore  .gitmodules  CMakeLists.txt  main  main.c
.github/workflows/: cmake-multi-platform.yml
include/: more_headers.h
